logs/feedly.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/amqp'...
Listing './lib/python3.5/site-packages/amqp-2.2.2.dist-info'...
Listing './lib/python3.5/site-packages/billiard'...
Listing './lib/python3.5/site-packages/billiard/dummy'...
Listing './lib/python3.5/site-packages/billiard-3.5.0.3.dist-info'...
Listing './lib/python3.5/site-packages/cassandra'...
Listing './lib/python3.5/site-packages/cassandra/cqlengine'...
Listing './lib/python3.5/site-packages/cassandra/io'...
Listing './lib/python3.5/site-packages/cassandra_driver-3.12.0.egg-info'...
Listing './lib/python3.5/site-packages/celery'...
Listing './lib/python3.5/site-packages/celery/app'...
Listing './lib/python3.5/site-packages/celery/apps'...
Listing './lib/python3.5/site-packages/celery/backends'...
Listing './lib/python3.5/site-packages/celery/backends/database'...
Listing './lib/python3.5/site-packages/celery/bin'...
Listing './lib/python3.5/site-packages/celery/concurrency'...
Listing './lib/python3.5/site-packages/celery/contrib'...
Listing './lib/python3.5/site-packages/celery/contrib/testing'...
Listing './lib/python3.5/site-packages/celery/events'...
Listing './lib/python3.5/site-packages/celery/fixups'...
Listing './lib/python3.5/site-packages/celery/loaders'...
Listing './lib/python3.5/site-packages/celery/security'...
Listing './lib/python3.5/site-packages/celery/task'...
Listing './lib/python3.5/site-packages/celery/utils'...
Listing './lib/python3.5/site-packages/celery/utils/dispatch'...
Listing './lib/python3.5/site-packages/celery/utils/static'...
Listing './lib/python3.5/site-packages/celery/worker'...
Listing './lib/python3.5/site-packages/celery/worker/consumer'...
Listing './lib/python3.5/site-packages/celery-4.1.0.dist-info'...
Listing './lib/python3.5/site-packages/cqlengine'...
Listing './lib/python3.5/site-packages/cqlengine/tests'...
Listing './lib/python3.5/site-packages/cqlengine/tests/columns'...
Listing './lib/python3.5/site-packages/cqlengine/tests/connections'...
Listing './lib/python3.5/site-packages/cqlengine/tests/management'...
Listing './lib/python3.5/site-packages/cqlengine/tests/model'...
Listing './lib/python3.5/site-packages/cqlengine/tests/operators'...
Listing './lib/python3.5/site-packages/cqlengine/tests/query'...
Listing './lib/python3.5/site-packages/cqlengine/tests/statements'...
Listing './lib/python3.5/site-packages/cqlengine-0.21.0.egg-info'...
Listing './lib/python3.5/site-packages/feedly'...
Listing './lib/python3.5/site-packages/feedly/aggregators'...
Compiling './lib/python3.5/site-packages/feedly/aggregators/base.py'...
***   File "./lib/python3.5/site-packages/feedly/aggregators/base.py", line 91
    except DuplicateActivityException, e:
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/feedly/feed_managers'...
Listing './lib/python3.5/site-packages/feedly/feeds'...
Listing './lib/python3.5/site-packages/feedly/feeds/aggregated_feed'...
Listing './lib/python3.5/site-packages/feedly/metrics'...
Listing './lib/python3.5/site-packages/feedly/serializers'...
Compiling './lib/python3.5/site-packages/feedly/serializers/aggregated_activity_serializer.py'...
***   File "./lib/python3.5/site-packages/feedly/serializers/aggregated_activity_serializer.py", line 101
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/feedly/serializers/cassandra'...
Compiling './lib/python3.5/site-packages/feedly/settings.py'...
***   File "./lib/python3.5/site-packages/feedly/settings.py", line 31
    except exceptions, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/feedly/storage'...
Listing './lib/python3.5/site-packages/feedly/storage/cassandra'...
Listing './lib/python3.5/site-packages/feedly/storage/hbase'...
Listing './lib/python3.5/site-packages/feedly/storage/redis'...
Listing './lib/python3.5/site-packages/feedly/storage/redis/structures'...
Listing './lib/python3.5/site-packages/feedly/tests'...
Compiling './lib/python3.5/site-packages/feedly/tests/__init__.py'...
***   File "./lib/python3.5/site-packages/feedly/tests/__init__.py", line 7
    except RuntimeError, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/feedly/tests/aggregators'...
Listing './lib/python3.5/site-packages/feedly/tests/feeds'...
Listing './lib/python3.5/site-packages/feedly/tests/feeds/aggregated_feed'...
Listing './lib/python3.5/site-packages/feedly/tests/managers'...
Listing './lib/python3.5/site-packages/feedly/tests/storage'...
Listing './lib/python3.5/site-packages/feedly/tests/storage/redis'...
Listing './lib/python3.5/site-packages/feedly/tests/utils'...
Listing './lib/python3.5/site-packages/feedly/utils'...
Compiling './lib/python3.5/site-packages/feedly/utils/__init__.py'...
***   File "./lib/python3.5/site-packages/feedly/utils/__init__.py", line 60
    except exceptions, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/feedly/verbs'...
Listing './lib/python3.5/site-packages/feedly-0.11.3.egg-info'...
Listing './lib/python3.5/site-packages/kombu'...
Listing './lib/python3.5/site-packages/kombu/async'...
Listing './lib/python3.5/site-packages/kombu/async/aws'...
Listing './lib/python3.5/site-packages/kombu/async/aws/sqs'...
Listing './lib/python3.5/site-packages/kombu/async/http'...
Listing './lib/python3.5/site-packages/kombu/transport'...
Listing './lib/python3.5/site-packages/kombu/transport/sqlalchemy'...
Listing './lib/python3.5/site-packages/kombu/transport/virtual'...
Listing './lib/python3.5/site-packages/kombu/utils'...
Listing './lib/python3.5/site-packages/kombu-4.1.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/vine'...
Listing './lib/python3.5/site-packages/vine-1.1.4.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
